--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-localize": "^3.4.1",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-navigation-stack": "^2.10.4"
   },
